:space_invader: fix icon button visibility on chrome/firefox

--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -392,6 +392,9 @@ i {
       color: #212529;
       width: 100%;
       padding: 15px;
+      i {
+        font-size: 1rem;
+      }
     }
     .fill {
       position: absolute;
